assets/frontend/css/styles.css
/* ... */
div.my-account div.addresses-additional {
    clear: both;
}

div.my-account div.addresses-additional li {
    margin-bottom: 10px;
}

div.my-account form {
    margin: 0 auto;
    padding: 10px;
    width: 50%;
}

div.my-account form fieldset,
#create-account fieldset {
    border-bottom: 1px dotted;
    margin-bottom: 10px;
}

div.my-account form fieldset input.text,
div.my-account form fieldset input[type="text"],
div.my-account form fieldset textarea,
div.my-account form fieldset select {
    width: 100%;
}

div.my-account form div.buttons-set {
    overflow: hidden;
}

div.my-account form div.buttons-set button {
    float: right;
}

div.my-account div.addresses-primary ol li {
    margin-bottom:10px;
}

div.my-account div.order-actions {
    float:right;
}

div.my-account dl.order-info,
div.my-account div.order-items {
    clear:both;
}

/* ------------------------------ REMEMBER ME */
.window-overlay { 
    background:url(../images/window_overlay.png) repeat;
    background:rgba(0, 0, 0, 0.35); 
    position:absolute; 
    top:0; 
    left:0; 
    height:100%; 
    width:100%; 
    z-index:990;
}

.remember-me label { 
    float:none;
    margin:0 6px;
}

.remember-me-popup { 
    background:#fff; 
    border:1px solid #ccc;
    left:50%; 
    top:50%; 
    position: fixed; 
    margin:-85px 0 0 -200px; 
    width:400px; 
    text-align:left; 
    -moz-box-shadow:0 0 6px #ccc; 
    -webkit-box-shadow:0 0 6px #ccc; 
    -box-shadow:0 0 6px #ccc; 
    z-index:1000; 
}

.remember-me-popup h3 { 
    background:#d9e5ee; 
    border-bottom:1px solid #ccc; 
    font-size:14px; 
    padding:5px 10px; 
}

.remember-me-popup .remember-me-popup-head { 
    position:relative; 
}

.remember-me-popup .remember-me-popup-head .remember-me-popup-close { 
    background:url(../images/btn_window_close.gif) no-repeat; 
    display:block; 
    position:absolute; 
    top:7px; 
    right:7px; 
    height:15px; 
    width:15px; 
    text-indent:-9999em; 
}

.remember-me-popup .remember-me-popup-body { 
    padding:10px; 
}

.remember-me-popup .remember-me-popup-body a { 
    display:inline-block; 
    height:19px; 
    border:1px solid #de5400; 
    background:#f18200; 
    padding:0 8px; 
    font:bold 12px/19px Arial, Helvetica, sans-serif; 
    text-align:center; 
    text-decoration:none; 
    white-space:nowrap; 
    color:#fff; 
}

/* ----------------------------- MY ACCOUNT NAVIGATION SIDEBAR */

div.block-account div.block-content ul {
    list-style-type: none;
}

div.block-account div.block-content ul li {
    border-top: 1px solid;
    margin-top: 5px;
    padding-top: 5px;
}

div.block-account div.block-content ul li:first-child {
    border-top:0;
}

/* ----------------------------- WISHLIST */

#wishlist-view-form {
    width: 95%;
}

div.my-account .my-wishlist form fieldset textarea {
    width: 95%;
}

.my-wishlist .buttons-set2 {
    margin-bottom: 10px;
}

.my-wishlist table td.product-added {
    white-space: nowrap;
}

div.my-account div.my-wishlist table td.qty {
    width: 160px;
}

div.my-account div.my-wishlist table input.qty {
    width: 20px;
}

.my-wishlist table button.btn-cart {
    float: right;
    margin-left: 10px;
    width: 110px;
}

/* ----------------------------- COMPARE PRODUCTS */
body.catalog-product-compare-index .title-buttons {
    margin: 10px 0 0;
}

body.catalog-product-compare-index .data-table .product-name {
    min-height:75px;
}

body.catalog-product-compare-index ul li {
    list-style-type: none;
}

body.catalog-product-compare-index table th {
    text-align: left;
    padding-left: 10px;
}

body.catalog-product-compare-index table th span {
    font-weight: bold;
}

body.catalog-product-compare-index table td {
    padding: 5px;
}

body.catalog-product-compare-index table td a.btn-remove {
    margin: 5px;
}

body.catalog-product-compare-index table tr.product-shop-row td,
body.catalog-product-compare-index table tr.add-to-row td {
    text-align: center;
}

body.catalog-product-compare-index table tr.product-shop-row button,
body.catalog-product-compare-index table tr.add-to-row button {
    display: inline;
}

body.catalog-product-compare-index table div.rating-box abbr.rating {
    margin: 2px auto;
}

body.catalog-product-compare-index table tr.product-shop-row .price-box {
    margin-top: 46px;
}

body.catalog-product-compare-index table tr.product-shop-row .ratings + .price-box {
    margin:0;
}

body.catalog-product-compare-index div.buttons-set {
    float:right;
    padding-bottom:20px;
}

/* ----------------------------- PROMO BAR */

section#promo {
    clear: both;
    overflow: hidden;
    width: 100%;
}

section#promo input#newsletter-email-address {
    width:auto;
}

section#promo div.block {
    padding: 5px 20px;
}

/* ----------------------------- PROMO TEXT */

section#promo div.block-promo-text {
    float: left;
    line-height: 30px;
    width: 370px;
}

/* ----------------------------- NEWSLETTER SUBSCRIPTION */

footer div.block-subscribe {
    float: right;
}

footer div.block-subscribe form label {
    float: left;
    line-height: 30px;
    margin-left: 10px;
}

footer div.block-subscribe form input {
    float: left;
    margin-left: 10px;
}

footer div.block-subscribe form button {
    float: left;
    margin-left: 10px;
}

/* ----------------------------- FOOTER */

footer {
    clear: both;
}

footer section {
    float: left;
    margin: 20px 0;
    width: 25%;
}

footer section h2 {
    margin-left: 20px;
}

footer section ul {
    clear: both;
    list-style-type: none;
    margin-left: 20px;
}

footer section.vcard ul li.tel {
    padding-top: 10px;
}

/* Social icons */

footer section.vcard a.facebook,
footer section.vcard a.rss,
footer section.vcard a.twitter,
footer section.vcard a.youtube {
    display: block;
    float: left;
    height: 24px;
    margin: 0 10px 10px 0;
    opacity: .8;
    text-indent: -99999px;
    width: 24px;
}
/* ... */

